# eddn.dev

./: README.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: deploy-og.yml  deploy-view-counter.yml  deploy.yml
services/og-generator/src/: main.rs
services/view-counter/: Cargo.toml
services/view-counter/src/: main.rs
src/: content.config.ts
src/components/: Footer.astro  GitHubContributions.astro  GitHubLanguages.astro  Header.astro  LeetCodeContributions.astro  LeetCodeFilters.astro  Pagination.astro  ViewCounter.astro
src/components/pages/: BioPage.astro  LandingPage.astro  NotFoundPage.astro  TrajectoryPage.astro
src/content/articles/en/: achronyme-vm-architecture.md
src/content/articles/es/: achronyme-vm-architecture.md
src/content/blog/: bienvenido-2026.md
src/content/blog/en/: achronyme-0-1-0-beta2.md  achronyme-release.md  achronyme-zk.md  welcome-2026.md
src/content/blog/es/: achronyme-0-1-0-beta2.md  achronyme-release.md  achronyme-zk.md
src/content/leetcode/en/: 0003-longest-substring-without-repeating-characters.md  0005-longest-palindromic-substring.md  0006-zig-zag-conversion.md  0007-reverse-integer.md  (+75 more)
src/i18n/: trajectory.ts  ui.ts
src/layouts/: Layout.astro
src/pages/: 404.astro  index.astro  trajectory.astro
src/pages/articles/: [...page].astro  [...slug].astro
src/pages/blog/: [...page].astro  [...slug].astro  index.astro
src/pages/es/: 404.astro  index.astro  trajectory.astro
src/pages/leetcode/: [...page].astro  [...slug].astro
src/styles/: global.css
src/utils/: stickySidebar.ts
(+87 files in other folders)
