[package]
name = "view-counter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
